<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zero-G</string>
    <string name="action_settings">Settings</string>
    <string name="single_player_button">Single-player</string>
    <string name="multi_player_button">Multi-player</string>
    <string name="scan_for_devices">Scan for other aviable devices</string>
    <string name="other_available_devices">Other Available Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="title_activity_multi_player">Multi-playerActivity</string>
    <string name="server_client_text">Start as server or client?</string>
    <string name="server_button">Server</string>
    <string name="client_button">Client</string>
    <string name="statistics_button">Statistics</string>
    <string name="zero_g">Zero-G</string>
    <string name="title_activity_post_fight">PostFightActivity</string>
    <string name="statistics_title">Statistics</string>
    <string name="bullets_fired">"Bullets Fired: "</string>
    <string name="hits">"Hits: "</string>
    <string name="hit_ratio">"Hit Ratio: "</string>
    <string name="total_statistics_mp_title">Total Statistics (Multi-Player)</string>
    <string name="total_wins">"Total Wins: "</string>
    <string name="total_losses">"Total Losses: "</string>
    <string name="win_ratio">"Win Ratio: "</string>
    <string name="total_bullets_fired">"Total Bullets Fired: "</string>
    <string name="total_hits">"Total Hits: "</string>
    <string name="total_hit_ratio">"Total Hit Ratio: "</string>
    <string name="title_activity_share_with_contact">ShareWithContactActivity</string>
    <string name="share">Share with a friend</string>
    <string name="share_text">Share with a friend</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="total_statistics_sp_title">Total Statistics (Single-Player)</string>
    <string name="victory_message">VICTORY</string>
    <string name="defeat_message">DEFEAT</string>
    <string name="player_health">Player health</string>
    <string name="enemy_health">Enemy health</string>
    <string name="no_devices_found">No devices found</string>
    <string name="no_paired_devices_found">No paired devices found</string>
    <string name="bluetooth_not_suported">Your device does not support bluetooth</string>
    <string name="waiting_for_client">Waiting for client to connect...</string>
    <string name="scanning_for_devices">Scanning for devices...</string>
    <string name="connecting_to_server">Connecting to server...</string>
   	<string name="connecting">Connecting...</string>
   	<string name="cancel">Cancel</string>
   	<string name="no_contacts_found">No contacts found</string>

</resources>
