<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.bengtsson.thegame.activities.StatisticsActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/post_fight_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bullets_fired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bullets_fired"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hits"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/hit_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_statistics_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_winns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_wins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_losses"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/win_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_bullets_fired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bullets_fired"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_hits"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_hit_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_hit_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
