<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.bengtsson.thegame.MultiPlayerActivity"
    android:background="?android:attr/dividerHorizontal"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/server_client_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_client_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/dividerVertical" >
        

        <Button
            android:id="@+id/server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server_button"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onServerClicked" />

        <Button
            android:id="@+id/client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/client_button"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClientClicked" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/paired_devices_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paired_devices"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <ListView
                android:id="@+id/paired_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/new_devices_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_available_devices"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <ListView
                android:id="@+id/new_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

            </ListView>

            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="onScanForDevicesClicked"
                android:text="@string/scan_for_devices"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>