<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_right"
    android:orientation="vertical"
    android:tag="MULTIPLAYER_FRAG"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/server_client_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_client_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/scan_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#000000"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle" >
        

        <Button
            android:id="@+id/server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/client_button"
            style="?android:attr/buttonBarButtonStyle" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/paired_devices_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paired_devices"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <ListView
                android:id="@+id/paired_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/new_devices_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_available_devices"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <ListView
                android:id="@+id/new_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

            </ListView>

            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/scan_for_devices"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>